feat: implementing dark theme mode

--- a/packages/storybook/.storybook/preview-head.html
+++ b/packages/storybook/.storybook/preview-head.html
@@ -1,11 +1,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-  rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
 <style>
-
   * {
     margin: 0;
     padding: 0;
@@ -15,8 +11,10 @@
     list-style: none;
     text-decoration: none;
   }
-  
-  #root, html, body {
+
+  #root,
+  html,
+  body {
     height: 100%;
     width: 100%;
   }
@@ -27,6 +25,15 @@
     align-items: center;
     justify-content: center;
     background: #202024;
+  }
+
+  #storybook-root {
+    height: inherit;
+  }
+
+  .sb-show-main.sb-main-padded {
+    padding: 0;
+    background-color: transparent;
   }
 </style>
 
